--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ a {
 }
 
 body {
+    position: relative; /* Pour le menu burger */
     color: white;
     background: var(--primary);
     font-family: 'Open Sans', sans-serif;
@@ -57,7 +58,11 @@ header h1 {
 header .burger {
     width: 40px;
     height: 40px;
-    background: red;
+}
+
+header .burger svg {
+    width: 100%;
+    height: 100%;
 }
 
 /*Section1*/
@@ -360,6 +365,41 @@ footer .copyright {
     text-align: center;
 }
 
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100vh;
+    font-size: 1.5em;
+    background: var(--black);
+    z-index: 100;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+}
+
+.menu ul {
+    padding: 60px 10px;
+    line-height: 3.5em;
+}
+
+.menu li:hover {
+    background: darkgrey;
+    cursor: pointer;
+}
+
+.menu .close {
+    position: absolute;
+    right: 0;
+    width: 50px;
+    height: 50px;
+}
+
+.menu .close svg {
+    width: 100%;
+    height: 100%;
+}
+
 @media screen and (max-width: 1179px) {
     main {
         width: 770px;
@@ -525,6 +565,10 @@ footer .copyright {
         padding: 1em 0;
         text-align: center;
     }
+
+    .menu {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 460px) {
@@ -536,3 +580,4 @@ footer .copyright {
         margin-top: 200px;
     }
 }
+
