--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ header .burger svg {
 .section1 {
     width: 100%;
     margin-top: 50px;
-    padding: 80px;
+    padding: 0 80px 80px 80px;
     position: relative
 }
 
